indrakila.yaml
apiVersion: v1
kind: Service
metadata:
  name: indrakila
  namespace: development
spec:
  selector:
    app: indrakila
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indrakila
  namespace: development
spec:
  selector:
    matchLabels:
      app: indrakila
  template:
    metadata:
      labels:
        app: indrakila
    spec:
      containers:
      - name: indrakila
        image: fataraz/indrakila:dev-v9
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
          - containerPort: 80
